--- a/package.json
+++ b/package.json
@@ -3,11 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.23.2",
+    "eslint": "^6.3.0",
+    "fs-extra": "^8.1.0",
+    "ganache-cli": "^6.0.3",
+    "next": "^4.1.4",
+    "next-routes": "^1.4.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.1.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.0",
+    "solc": "^0.4.19",
+    "truffle-hdwallet-provider": "^0.0.3",
+    "web3": "^1.0.0-beta.35"
   },
   "scripts": {
+    "lint": "eslint \"**/*.{js,jsx}\" --quiet",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
